add init database script

--- a/echarts/stock/templates/stock/index.html
+++ b/echarts/stock/templates/stock/index.html
@@ -27,9 +27,9 @@
                     var dates = new Array();
                     var close = new Array();
 
-                    for(var i in obj.data){
-                        dates[i] = obj.data[i].Date;
-                        close[i] = obj.data[i].Close;
+                    for(var i in obj.stock_history){
+                        dates[i] = obj.stock_history[i].Date;
+                        close[i] = obj.stock_history[i].Close;
                     }
 
 
